# sweep_hl_cli

./: .gitignore  CREDENTIALS_SETUP.md  NETWORK_TOGGLE_README.md  README.md  UI_RENDERING_ARCHITECTURE.md  USER_SETUP_CHECKLIST.md  callable_UI_components.txt  config.yaml  credentials.yaml.template  demo_with_credentials.py  env.example  hyperliquid_api_methods.txt  hyperliquid_client.py  migrate_database.py  pyproject.toml  reasoning_demo.py  requirements.txt  restart_all.sh  run_backend.py  setup.bat  setup.cfg  setup.sh  setup_credentials.py  start.bat  start.sh
analysis/: README.md  __init__.py  generate_report.py  latency_analyzer.py  timing_middleware.py  timing_tracker.py
backend/: main.py  requirements.txt  test_candles.py
backend/api/: assets.py  chat.py  models.py  timing.py
database/: trading_data.db
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: NetworkIndicator.css  NetworkIndicator.jsx
frontend/src/constants/: uiActions.js
frontend/src/services/: ChartDataManager.js  api.js  componentRegistry.js  priceDataCache.js  uiStateManager.js  websocketService.js
frontend/src/styles/: colors.css  colors.md  typography.css  typography.md
model_handlers/: model_stream_handler.py
src/: config.py  network_context.py
src/api/: hyperliquid_client.py
src/database/: trading_data.db
src/hyperliquid_wrapper/: __init__.py
src/hyperliquid_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/reasoning/: __init__.py  llm_client.py  tools.py
(+35 files in other folders)
