[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperliquid_wrapper"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A wrapper for the Hyperliquid API client."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Or your chosen license
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/yourprojectname" # Optional
"Bug Tracker" = "https://github.com/yourusername/yourprojectname/issues" # Optional 